deployment/manual/fc/fc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fc-service
  labels:
    app: fc-service
  namespace: federated-catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fc-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: fc-service
    spec:
      containers:
        - name: fc-service-server-image
          image: node-654e3bca7fbeeed18f81d7c7.ps-xaas.io/catalogue/fc-service-server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
#          volumeMounts:
#            - name: fc-file-store
#              mountPath: /var/lib/fc-service
#              subPath: filestore
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 30
          resources: { }
          securityContext:
            allowPrivilegeEscalation: false 
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - fc-service
                topologyKey: "kubernetes.io/hostname"
#      volumes:
#        - name: fc-file-store
#          persistentVolumeClaim:
#            claimName: fc-filestore-claim
      restartPolicy: Always
