deployment/manual/fc/fc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fc-service
  namespace: federated-catalogue
  labels:
    app: fc-service
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    app: fc-service
  type: ClusterIP
