deployment/manual/fc/fc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: cert-manager-webhook
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/server-snippet: |
        location /actuator {
          deny all;
          return 403;
        }
  name: fc-service-ingress
  namespace: federated-catalogue
spec:
  tls:
    - hosts:
#        - fc-server.gxfs.dev
        - fc-server.lila.dih-cloud.com
#      secretName: wildcard-gxfs-dev
      secretName: fc-server.lila.dih-cloud.com-tls
  rules:
#    - host: fc-server.gxfs.dev
    - host: fc-server.lila.dih-cloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fc-service
                port:
                  number: 8081
